--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
+certifi==2020.4.5.1
+chardet==3.0.4
 Click==7.0
+cycler==0.10.0
 Flask==1.1.1
-gunicorn==19.9.0
+Flask-Ext==0.1
+flask-heroku==0.1.9
+Flask-Login==0.5.0
+Flask-Session==0.3.1
+Flask-SQLAlchemy==2.4.1
+idna==2.9
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.11.1
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
-Werkzeug==0.15.6
-requests==2.18.4
-requests-oauthlib==0.8.0
-sqlalchemy==1.3.16
-flask_sqlalchemy==2.4.1
-flask_heroku==1.1.1
+matplotlib==3.1.3
+numpy==1.18.1
+opencv-python==4.2.0.32
+pandas==1.0.1
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.23.0
+six==1.14.0
+SQLAlchemy==1.3.16
+urllib3==1.25.9
+Werkzeug==1.0.0
