--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,6 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
-matplotlib==3.1.3
-numpy==1.18.1
-opencv-python==4.2.0.32
-pandas==1.0.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
@@ -26,3 +22,4 @@ SQLAlchemy==1.3.16
 urllib3==1.25.9
 Werkzeug==1.0.0
 gunicorn==19.9.0
+psycopg2-binary==2.8.5
